--- a/src/app/featureModule/image-upload/image/image.component.html
+++ b/src/app/featureModule/image-upload/image/image.component.html
@@ -1,1 +1,20 @@
-<p>image works!</p>
+<div class="container">
+    <h2>Image Upload</h2>
+    
+    <div class="alert">{{message}}</div>
+    <form (ngSubmit)=" onSubmit(myForm)" #myForm="ngForm">
+        <div class="form-group">
+            <label for="">Image Upload</label>
+            <input type="file" (change)="onSelectFile($event)" name="upload"  class="form-control"  [(ngModel)]="user.upload"
+            #upload="ngModel" multiple required>
+            <div *ngIf="upload.invalid  &&  (upload.dirty || upload.touched || !isValidFormSubmitted) " class="error">
+                <div *ngIf="upload['errors'].required">upload is required</div>
+               
+            </div>
+           
+        </div>
+        <button type="submit"  class="btn btn-primary">Submit</button>
+    
+    </form>
+    <img [src]="url" *ngFor="let url of urls" width="200px" height="200px">
+    </div>
