--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -78,6 +78,9 @@
       <li class="nav-item active">
         <a class="nav-link" routerLink="timezone/timezone-change">Timezone</a>
       </li>
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="spinner/multiple-spinner">Spinner</a>
+      </li>
       
     </ul>
   
