--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -6,33 +6,7 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <!-- <li class="nav-item active">
-        <a class="nav-link" routerLink="validation/template">Template </a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" routerLink="validation/reactive">Reactive </a>
-      </li> -->
-      <!-- <li class="nav-item active">
-        <a class="nav-link" routerLink="/pagination">Pagination </a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" routerLink="/json-api">JsonApi</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" routerLink="/date-pick">DatePick</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" routerLink="/error-handling">ErrorHandling</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" routerLink="/timezone">Timezone</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" routerLink="/pdfupload">Pdf Upload</a>
-      </li> -->
-      <!-- <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li> -->
+
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Validation
@@ -80,6 +54,9 @@
       </li>
       <li class="nav-item active">
         <a class="nav-link" routerLink="spinner/multiple-spinner">Spinner</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="match/confirm-password">Password Match</a>
       </li>
       
     </ul>
