--- a/src/app/featureModule/async/async-call-child/async-call-child.component.html
+++ b/src/app/featureModule/async/async-call-child/async-call-child.component.html
@@ -4,3 +4,4 @@
         <li>{{user.email}}</li>
     </ul>
 </div>
+<ngx-spinner   [fullScreen]="true" type="ball-spin-clockwise" size="medium"></ngx-spinner>
