--- a/src/app/featureModule/async/async-call/async-call.component.html
+++ b/src/app/featureModule/async/async-call/async-call.component.html
@@ -1,2 +1,3 @@
 <p>async-call works!</p>
 <app-async-call-child [users$]="users$ | async "></app-async-call-child>
+<!-- <ngx-spinner   [fullScreen]="true" type="ball-spin-clockwise" size="medium"></ngx-spinner> -->
