--- a/src/app/featureModule/pagination/pagination/pagination.component.html
+++ b/src/app/featureModule/pagination/pagination/pagination.component.html
@@ -29,3 +29,4 @@
 <div>
 <pagination-controls  id="listing_pagination" maxSize="10" directionLinks="true" (pageChange)="page = $event"></pagination-controls>
 </div>
+<ngx-spinner   [fullScreen]="true" type="ball-spin-clockwise" size="medium"></ngx-spinner>
