--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -24,7 +24,7 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" routerLink="date-picker/bootstap-datepicker">Datepicker Bootstrap</a>
-          
+          <a class="dropdown-item" routerLink="date-picker/material-datepicker">Datepicker Material</a>
          
         </div>
       </li>
