--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -13,6 +13,7 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" routerLink="validation/template">Template</a>
+          <div class="dropdown-divider"></div>
           <a class="dropdown-item" routerLink="validation/reactive">Reactive</a>
          
         </div>
@@ -24,6 +25,7 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" routerLink="date-picker/bootstap-datepicker">Datepicker Bootstrap</a>
+          <div class="dropdown-divider"></div>
           <a class="dropdown-item" routerLink="date-picker/material-datepicker">Datepicker Material</a>
          
         </div>
