--- a/src/app/featureModule/timezone/timezone-change/timezone-change.component.html
+++ b/src/app/featureModule/timezone/timezone-change/timezone-change.component.html
@@ -1,19 +1,21 @@
+<div class="container">
 <h2>Timezone Change</h2>
 
 <div class="input-wrapper">
         <label>Date Time:</label>
-        <input [(ngModel)]="selectedMoment"
+        <input [(ngModel)]="selectedMoment"  (ngModelChange)="selectedDate(selectedMoment)"
                [owlDateTimeTrigger]="dtPicker1" [owlDateTime]="dtPicker1">
         <owl-date-time #dtPicker1></owl-date-time>
     </div>
 
-   
-<div> GMT: {{selectedMoment| date:'short':'GMT'}}</div>
-<div>PST: {{selectedMoment| date:'short':'PST'}}</div>
-<div>IST:  {{selectedMoment| date:'short':'IST'}}</div>
-<div>UTC:  {{selectedMoment| date:'short':'UTC'}}</div>
-<div>Mountain Time:{{selectedMoment| date:'short':'UTC-7'}}</div>
-<div>CST:{{selectedMoment| date:'short':'UTC-6'}}</div>
+  <div class="form-group">
+        <label for="country">Select Timezone</label>
+    <select  name ="timezone" class="form-control"  >
+        <option value="undefined" >Select</option>
+        <option [ngValue]="selectTime.id" *ngFor="let selectTime of timez"  >{{selectTime.name}}-->{{selectTime.time}}</option>
+    </select>
+    </div>
+</div>
    
  
    
