--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -60,6 +60,9 @@
       <li class="nav-item active">
         <a class="nav-link" routerLink="match/confirm-password">Password Match</a>
       </li>
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="mat/datatable">Data Table</a>
+      </li>
       
     </ul>
   
