--- a/src/app/featureModule/pagination/pagination-child/pagination-child.component.html
+++ b/src/app/featureModule/pagination/pagination-child/pagination-child.component.html
@@ -2,10 +2,10 @@
 <table class="table table-striped">
     <thead>
         <tr>
-            <th>Gender</th>
-            <th>Name</th>
-            <th>Email</th>
-            <th>Picture</th>
+            <th>{{'Gender'| translate}}</th>
+            <th>{{'Name'| translate}}</th>
+            <th>{{'Email' | translate}}</th>
+            <th>{{'Picture'| translate}}</th>
            
         </tr>
     </thead>
