--- a/src/app/featureModule/validation/reactive/reactive.component.html
+++ b/src/app/featureModule/validation/reactive/reactive.component.html
@@ -1,10 +1,10 @@
 <div class="container">
-    <h2>Reactive Form</h2>
+    <h2>{{'Reactive Form'| translate}}</h2>
 
 <form [formGroup]="contactForm" (ngSubmit)="onSubmit()" novalidate>
  
     <div class="form-group">
-      <label for="name">Name </label>
+      <label for="name">{{'Name'|translate}} </label>
       <input type="text" id="firstname" name="name" formControlName="name" class="form-control">
     <div
       *ngIf="!name?.valid && (name?.dirty ||name?.touched || isSubmit)" class="error">
@@ -20,7 +20,7 @@
 
    
     <div class="form-group">
-      <label for="email">Email </label>
+      <label for="email">{{'Email'|translate}} </label>
       <input type="email" id="email" name="email" formControlName="email" class="form-control">
     
     <div *ngIf="!email.valid && (email.dirty ||email.touched || isSubmit)" class="error">
@@ -34,7 +34,7 @@
     </div>
 
     <div class="form-group">
-        <label for="mobile">Mobile </label>
+        <label for="mobile">{{'Mobile'|translate}} </label>
         <input type="number"  name="mobile" formControlName="mobile" class="form-control" >
       
       <div *ngIf="!mobile.valid && (mobile.dirty ||mobile.touched || isSubmit)" class="error">
@@ -49,7 +49,7 @@
    
 
       <div class="form-group">
-        <label for="country">Country </label>
+        <label for="country">{{'Country'|translate}} </label>
        
         <select name="country" id="" formControlName="country" class="form-control">
             <option value="">select</option>
@@ -64,7 +64,7 @@
    
    
     <div class="form-group">
-      <label for="gender">Gender </label>
+      <label for="gender">{{'Gender'|translate}} </label>
       <input type="radio" value="male" id="gender" name="gender" formControlName="gender"> Male
       <input type="radio" value="female" id="gender" name="gender" formControlName="gender"> Female
     
@@ -76,7 +76,7 @@
     </div>
 
     <div class="form-group">
-        <label for="description">Description</label>
+        <label for="description">{{'Description'|translate}}</label>
         <textarea type="text"  name="description" formControlName="description" class="form-control"></textarea>
       
       <div *ngIf="!description.valid && (description.dirty ||description.touched || isSubmit)" class="error">
@@ -88,7 +88,7 @@
       </div>
    
     <div class="form-group">
-      <label for="isMarried">Married </label>
+      <label for="isMarried">{{'Married'|translate}} </label>
       <input type="checkbox" id="isMarried" name="isMarried" formControlName="isMarried">
     
     <div *ngIf="!isMarried.valid && (isMarried.dirty ||isMarried.touched || isSubmit)" class="error">
@@ -107,7 +107,7 @@
     <p>{{contactForm.valid}} </p>
    
     <p>
-      <button type="submit" class="btn btn-primary">Submit</button>
+      <button type="submit" class="btn btn-primary">{{'Submit'|translate}}</button>
     </p>
    
    
