--- a/src/app/featureModule/validation/template/template.component.html
+++ b/src/app/featureModule/validation/template/template.component.html
@@ -1,8 +1,8 @@
 <div class="container">
-    <h2>Template Driven Form</h2>
+    <h2>{{'Template Driven Form'| translate}}</h2>
     <form (ngSubmit)=" onSubmit(myForm)" #myForm="ngForm">
     <div class="form-group"  >
-        <label for="name">Name</label>
+        <label for="name">{{'Name'| translate}}</label>
         <input type="text" name="name"
          class="form-control"
          placeholder="name"
@@ -15,7 +15,7 @@
     </div>
 
     <div class="form-group">
-        <label for="email">Email</label>
+        <label for="email">{{'Email'| translate}}</label>
         <input type="email" name="email"
          class="form-control"
          placeholder="email"
@@ -30,7 +30,7 @@
     </div>
 
     <div class="form-group">
-        <label for="mobile">Mobile</label>
+        <label for="mobile">{{'Mobile'| translate}}</label>
         <input type="number" name="mobile"
          class="form-control"
          placeholder="mobile"
@@ -44,7 +44,7 @@
     </div>
 
     <div class="form-group">
-        <label for="gender">Gender</label>
+        <label for="gender">{{'Gender'| translate}}</label>
         <input type="radio" value="male" name="gender" [ngModel]="user.gender" required #gender="ngModel"> Male
         <input type="radio" value="female" name="gender" [ngModel]="user.gender" required #gender="ngModel"> Female
         <div *ngIf="(gender.invalid ) && (email.dirty || email.touched || !isValidFormSubmitted) " class="error">
@@ -54,7 +54,7 @@
     </div>
 
     <div class="form-group">
-        <label for="country">Country</label>
+        <label for="country">{{'Country'|translate}}</label>
         <select name="country" id="" class="form-control"  [(ngModel)]="user.country" #country="ngModel" required>
             <option value="">Select</option>
             <option [ngValue]="c.name" *ngFor="let c of countryList">{{c.name}}</option>
@@ -66,7 +66,7 @@
     </div>
 
     <div class="form-group">
-        <label for="description">Description</label>
+        <label for="description">{{'Description'|translate}}</label>
         <textarea name="description"
          class="form-control"
          placeholder="description"
@@ -79,7 +79,7 @@
     </div>
 
     <div class="form-group"  >
-        <label for="accept">Accept </label>
+        <label for="accept">{{'Accept'|translate}} </label>
         <input type="checkbox" name="accept"
          [(ngModel)]="user.accept"
            #accept="ngModel" required>
@@ -89,6 +89,6 @@
         </div>
     </div>
     <button type="submit"  class="btn btn-primary"  >
-    Sign Up</button>
+    {{'Sign Up'|translate}}</button>
     </form>
 </div>
