--- a/src/app/featureModule/datepicker/material-datepicker/material-datepicker.component.html
+++ b/src/app/featureModule/datepicker/material-datepicker/material-datepicker.component.html
@@ -1,4 +1,4 @@
-<h2>Material Ranger</h2>
+<h2>{{'Material DateRange'|translate}}</h2>
 <mat-form-field>
   <input matInput
       placeholder="Choose a date"
@@ -9,7 +9,7 @@
 </mat-form-field>
 
 
-<h2>Material Datepicker</h2>
+<h2>{{'Material Datepicker'|translate}}</h2>
 <mat-form-field>
   <input matInput [min]="minDate" [matDatepicker] = "picker1" placeholder = "Choose a date">
   <mat-datepicker-toggle matSuffix [for] = "picker1"></mat-datepicker-toggle>
