--- a/src/app/featureModule/spinner/multiple-spinner/multiple-spinner.component.html
+++ b/src/app/featureModule/spinner/multiple-spinner/multiple-spinner.component.html
@@ -1,7 +1,7 @@
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Small Spinner</h2>
+        <h2>{{'Small Spinner'| translate}}</h2>
         <button class="btn btn-primary" (click)="showSmall(true)" name="small">Show</button>
         <button class="btn btn-primary" (click)="hideSmall(false)" name="small">Hide</button>
         <div class="card" style="width: 30rem;" *appIsSpinner="isSmall">
@@ -16,7 +16,7 @@
     </div>
 
     <div class="col-md-4">
-        <h2>Medium Spinner</h2>
+        <h2>{{'Medium Spinner'|translate}}</h2>
         <button class="btn btn-primary" (click)="showMedium(true)" name="medium">Show</button>
         <button class="btn btn-primary" (click)="hideMedium(false)" name="medium">Hide</button>
         <div class="card" style="width: 30rem;" *appIsSpinner="isMedium">
@@ -32,7 +32,7 @@
 
 
     <div class="col-md-4">
-        <h2>Large Spinner</h2>
+        <h2>{{'Large Spinner'|translate }}</h2>
         <button class="btn btn-primary" (click)="showLarge(true)" name="large">Show</button>
         <button class="btn btn-primary" (click)="hideLarge(false)" name="large">Hide</button>
         <div class="card" style="width: 30rem;" *appIsSpinner="isLarge">
