--- a/src/app/featureModule/timezone/timezone-change/timezone-change.component.html
+++ b/src/app/featureModule/timezone/timezone-change/timezone-change.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-<h2>Timezone Change</h2>
+<h2>{{'Timezone Change'|translate}}</h2>
 
 <div class="input-wrapper">
         <label>Date Time:</label>
@@ -10,7 +10,7 @@
     </div>
 
   <div class="form-group">
-        <label for="country">Select Timezone</label>
+        <label for="country">{{'Select Timezone'|translate}}</label>
     <select  name ="timezone" class="form-control"  >
         <option value="undefined" >Select</option>
         <option [ngValue]="selectTime.id" *ngFor="let selectTime of timez"  >{{selectTime.name}}-->{{selectTime.time}}</option>
