changes of saurabh sir raise

--- a/src/app/featureModule/datepicker/bootstrap-datepicker/bootstrap-datepicker.component.html
+++ b/src/app/featureModule/datepicker/bootstrap-datepicker/bootstrap-datepicker.component.html
@@ -1,6 +1,6 @@
-<div class="container">
-    <div class="row">
-        <h3>{{'Bootstrap Datepicker'|translate}}</h3>
+
+    <div class=" my-4" >
+        <h3 class="my-4">{{'Bootstrap Datepicker'|translate}}</h3>
         <div class="col-xs-12 col-12 col-sm-6 col-md-4 form-group">
           <input class="form-control"
                  placeholder="Datepicker"
@@ -9,7 +9,7 @@
                  [minDate]="minDate"
                  >
         </div>
-        <h3>{{'Bootstrap DateRange'|translate}}</h3>
+        <h3 class="my-4">{{'Bootstrap DateRange'|translate}}</h3>
         <div class="col-xs-12 col-12 col-sm-6 col-md-4 form-group">
           <input class="form-control"
                  placeholder="Daterangepicker"
@@ -19,5 +19,5 @@
                 >
         </div>
       </div>
-    </div>
+    
        
