--- a/src/app/featureModule/pdf-upload/pdf/pdf.component.html
+++ b/src/app/featureModule/pdf-upload/pdf/pdf.component.html
@@ -1,7 +1,7 @@
-<div class="container">
+
     <h2>{{'Pdf Upload'| translate}}</h2>
     
-    <div class="alert">{{message}}</div>
+    <!-- <div class="alert">{{message}}</div> -->
     <form (ngSubmit)=" onSubmit(myForm)" #myForm="ngForm">
         <div class="form-group">
             <label for="">{{'Pdf Upload'|translate}}</label>
@@ -16,5 +16,5 @@
         <button type="submit"  class="btn btn-primary">{{'Submit'|translate}}</button>
     
     </form>
-    <!-- <img [src]="url" *ngFor="let url of urls" width="200px" height="200px"> -->
-    </div>
+  
+    
