--- a/src/app/featureModule/spinner/multiple-spinner/multiple-spinner.component.html
+++ b/src/app/featureModule/spinner/multiple-spinner/multiple-spinner.component.html
@@ -2,8 +2,8 @@
 <div class="row">
     <div class="col-md-4">
         <h2>{{'Small Spinner'| translate}}</h2>
-        <button class="btn btn-primary" (click)="showSmall(true)" name="small">Show</button>
-        <button class="btn btn-primary" (click)="hideSmall(false)" name="small">Hide</button>
+        <button class="btn btn-primary mr-4" (click)="showSmall(true)" name="small">Show</button>
+        <button class="btn btn-primary " (click)="hideSmall(false)" name="small">Hide</button>
         <div class="card" style="width: 30rem;" *appIsSpinner="isSmall">
             <ngx-spinner name="small" [fullScreen]="false" type="ball-spin-clockwise" size="small"></ngx-spinner>
             <div class="card-body">
@@ -17,7 +17,7 @@
 
     <div class="col-md-4">
         <h2>{{'Medium Spinner'|translate}}</h2>
-        <button class="btn btn-primary" (click)="showMedium(true)" name="medium">Show</button>
+        <button class="btn btn-primary mr-4" (click)="showMedium(true)" name="medium">Show</button>
         <button class="btn btn-primary" (click)="hideMedium(false)" name="medium">Hide</button>
         <div class="card" style="width: 30rem;" *appIsSpinner="isMedium">
             <ngx-spinner name="medium"  [fullScreen]="false" type="ball-spin-clockwise" size="medium"></ngx-spinner>
@@ -33,7 +33,7 @@
 
     <div class="col-md-4">
         <h2>{{'Large Spinner'|translate }}</h2>
-        <button class="btn btn-primary" (click)="showLarge(true)" name="large">Show</button>
+        <button class="btn btn-primary mr-4" (click)="showLarge(true)" name="large">Show</button>
         <button class="btn btn-primary" (click)="hideLarge(false)" name="large">Hide</button>
         <div class="card" style="width: 30rem;" *appIsSpinner="isLarge">
             <ngx-spinner name="large"  [fullScreen]="false" type="ball-spin-clockwise" size="large"></ngx-spinner>
